# mcp-opsmate

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pytest.ini  setup.sh
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py
docs/: architecture.md  pre-deploy-fixes.md  requirements.md  resume-entry.md  tech-spec.md
monitoring/: prometheus.yml
opsmate/: Dockerfile  pyproject.toml
opsmate-cli/: pyproject.toml
opsmate-cli/opsmate_cli/: __init__.py  client.py  commands.py  config.py  interactive.py  main.py  models.py  renderer.py
opsmate-cli/tests/: test_client.py
opsmate-web/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
opsmate-web/src/: App.tsx  index.css
opsmate-web/src/api/: admin.ts  client.ts  commands.ts  executions.ts
opsmate-web/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatThread.tsx  Dashboard.tsx  ExecutionHistory.tsx  Header.tsx  ModeIndicator.tsx  PlanDAG.tsx  Sidebar.tsx  StepCard.tsx  Toast.tsx
opsmate-web/src/context/: AuthContext.tsx  ModeContext.tsx
opsmate-web/src/hooks/: useExecution.ts  useSSE.ts
opsmate-web/src/pages/: AdminPage.tsx  ChatPage.tsx  DashboardPage.tsx  HistoryPage.tsx
opsmate-web/src/types/: api.ts
opsmate/api/: __init__.py
opsmate/api/middleware/: __init__.py  auth.py
opsmate/api/routes/: __init__.py  commands.py  health.py  stream.py
opsmate/core/: __init__.py  config.py  models.py  state_machine.py
opsmate/infra/: __init__.py  llm.py  mcp_hub.py
opsmate/mcp_servers/: base.py
opsmate/opsmate/: __init__.py
opsmate/opsmate/api/: dependencies.py  main.py
opsmate/opsmate/api/middleware/: logging.py
opsmate/opsmate/api/routes/: admin.py  executions.py
opsmate/opsmate/core/: constants.py  exceptions.py
opsmate/opsmate/infra/: database.py  mock_factory.py
opsmate/opsmate/mcp_servers/: __init__.py
opsmate/opsmate/services/: executor.py  intent.py
opsmate/services/: __init__.py  audit.py  recovery.py  state.py
scripts/: seed_demo_data.py  setup.sh
tests/: __init__.py  conftest.py
tests/test_api/: test_admin.py  test_commands.py  test_executions.py  test_health.py
tests/test_infra/: test_mock_factory.py
tests/test_services/: __init__.py  test_executor.py  test_intent.py  test_state.py
